RESOLVED FIXED44439
REGRESSION (Safari 5.0.1): HTML5 videos on YouTube never start playing on Windows
https://bugs.webkit.org/show_bug.cgi?id=44439
Summary REGRESSION (Safari 5.0.1): HTML5 videos on YouTube never start playing on Win...
Adam Roben (:aroben)
Reported 2010-08-23 10:47:22 PDT
To reproduce: 1. Go to http://youtube.com/html5 and sign up for the YouTube HTML5 beta 2. Go to http://www.youtube.com/watch?v=jincRobCkoE&feature=related The video never starts playing. The spinner in the video player just spins forever.
Attachments
Patch (1.98 KB, patch)
2010-11-16 17:18 PST, Jer Noble
eric.carlson: review+
Adam Roben (:aroben)
Comment 1 2010-08-23 10:47:47 PDT
Jer Noble
Comment 2 2010-11-16 17:18:27 PST
Jer Noble
Comment 3 2010-11-18 10:09:56 PST
Note You need to log in before you can comment on or make changes to this bug.