WebCore/platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp
@@ -254,7 +254,8 @@ void MediaPlayerPrivateQuickTimeVisualContext::setUpCookiesForQuickTime(const St
     // WebCore loaded the page with the movie URL with CFNetwork but QuickTime will 
     // use WinINet to download the movie, so we need to copy any cookies needed to
     // download the movie into WinInet before asking QuickTime to open it.
-    Frame* frame = m_player->frameView() ? m_player->frameView()->frame() : 0;
+    Document* document = m_player->mediaPlayerClient()->mediaPlayerOwningDocument();
+    Frame* frame = document ? document->frame() : 0;
     if (!frame || !frame->page() || !frame->page()->cookieEnabled())
         return;
 
